; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/rosperf/extr_rosperf.c_DisplayStatus.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/rosperf/extr_rosperf.c_DisplayStatus.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i32] [i32 37, i32 100, i32 32, i32 37, i32 115, i32 32, i32 37, i32 115, i32 0], align 4
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i32, i32)* @DisplayStatus to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @DisplayStatus(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca [128 x i32], align 16
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = getelementptr inbounds [128 x i32], [128 x i32]* %9, i64 0, i64 0
  %11 = load i32, i32* %8, align 4
  %12 = load i32, i32* %6, align 4
  %13 = load i32, i32* %7, align 4
  %14 = call i32 @_snwprintf(i32* %10, i32 128, i8* bitcast ([9 x i32]* @.str to i8*), i32 %11, i32 %12, i32 %13)
  %15 = load i32, i32* %5, align 4
  %16 = getelementptr inbounds [128 x i32], [128 x i32]* %9, i64 0, i64 0
  %17 = call i32 @SetWindowTextW(i32 %15, i32* %16)
  %18 = load i32, i32* %5, align 4
  %19 = load i32, i32* @TRUE, align 4
  %20 = call i32 @InvalidateRect(i32 %18, i32* null, i32 %19)
  %21 = load i32, i32* %5, align 4
  %22 = call i32 @UpdateWindow(i32 %21)
  ret void
}

declare dso_local i32 @_snwprintf(i32*, i32, i8*, i32, i32, i32) #1

declare dso_local i32 @SetWindowTextW(i32, i32*) #1

declare dso_local i32 @InvalidateRect(i32, i32*, i32) #1

declare dso_local i32 @UpdateWindow(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
